# routine

./: README.md
python/: natural_language_add_test.py
rust/clap_derive_test/: Cargo.toml
rust/clap_derive_test/src/: main.rs
rust/hashmap_traversal/: Cargo.toml
rust/hashmap_traversal/src/: main.rs
rust/teloxide_explore/: Cargo.toml  README.md
rust/teloxide_explore/src/: main.rs
